Bug #226580 --> Add back end support to handle multiple identities per account. Patch by Alec Flett.

r/sr=mscott